<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_tosca"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_tosca"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="729dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_data_photo"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/data_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/img_data_photo"
                android:text="@string/product_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_data_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_data_cosmetics"
                android:layout_width="170dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/product_name"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_data_photo"
                app:layout_constraintTop_toBottomOf="@+id/data_product" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/img_data_photo"
                android:text="@string/price"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_data_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_cosmetics" />

            <TextView
                android:id="@+id/tv_data_price"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_data_photo"
                app:layout_constraintTop_toBottomOf="@+id/price" />

            <TextView
                android:id="@+id/size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/img_data_photo"
                android:text="@string/size"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_data_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_price" />

            <TextView
                android:id="@+id/tv_data_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/size"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_data_photo"
                app:layout_constraintTop_toBottomOf="@+id/size" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/img_data_photo"
                app:layout_constraintTop_toBottomOf="@+id/img_data_photo" />

            <TextView
                android:id="@+id/tv_data_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/description"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/benefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:text="@string/benefit"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_data_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_desc" />

            <TextView
                android:id="@+id/tv_data_benefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/benefit"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/benefit"
                app:layout_constraintTop_toBottomOf="@+id/benefit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>